out.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/oriaj/Prog/Rust/rust_so_kernel/kernel/Cargo.toml
workspace: /home/oriaj/Prog/Rust/rust_so_kernel/Cargo.toml
   Compiling kernel v0.1.0 (/home/oriaj/Prog/Rust/rust_so_kernel/kernel)
error: the `noreturn` option cannot be used with `naked_asm!`
  --> kernel/src/process/trapret.rs:48:17
   |
48 |         options(noreturn)
   |                 ^^^^^^^^ the `noreturn` option is not meaningful for global-scoped inline assembly

error: the `noreturn` option cannot be used with `naked_asm!`
   --> kernel/src/process/trapret.rs:103:17
    |
103 |         options(noreturn)
    |                 ^^^^^^^^ the `noreturn` option is not meaningful for global-scoped inline assembly

error[E0425]: cannot find function `yield_cpu` in module `super`
   --> kernel/src/process/syscall.rs:223:16
    |
223 |         super::yield_cpu();
    |                ^^^^^^^^^ not found in `super`
    |
help: consider importing this function
    |
  3 + use crate::yield_cpu;
    |
help: if you import `yield_cpu`, refer to it directly
    |
223 -         super::yield_cpu();
223 +         yield_cpu();
    |

error[E0658]: the `!` type is experimental
  --> kernel/src/memory/user_code.rs:99:16
   |
99 |     F: Fn() -> !,
   |                ^
   |
   = note: see issue #35121 <https://github.com/rust-lang/rust/issues/35121> for more information
   = help: add `#![feature(never_type)]` to the crate attributes to enable
   = note: this compiler was built on 2026-01-13; consider upgrading it if it is out of date

warning: unused import: `self`
 --> kernel/src/allocator/slab.rs:4:17
  |
4 | use core::ptr::{self, null_mut, NonNull};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `FrameAllocator`, `Mapper`, `PageTableFlags`, `Page`, `Size4KiB`, and `VirtAddr`
 --> kernel/src/allocator/mod.rs:9:5
  |
9 |     VirtAddr, structures::paging::{FrameAllocator, Mapper, Page, PageTableFlags, Size4KiB}
  |     ^^^^^^^^                       ^^^^^^^^^^^^^^  ^^^^^^  ^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^

warning: unused import: `crate::debug_log`
 --> kernel/src/keyboard.rs:3:5
  |
3 | use crate::debug_log;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `PhysFrame`
 --> kernel/src/memory/user_pages.rs:6:15
  |
6 |         Page, PhysFrame, Size4KiB, PageTableFlags,
  |               ^^^^^^^^^

warning: unused import: `PhysAddr`
 --> kernel/src/memory/user_code.rs:5:15
  |
5 |     VirtAddr, PhysAddr,
  |               ^^^^^^^^

warning: unused import: `core::arch::asm`
 --> kernel/src/process/trapret.rs:4:5
  |
4 | use core::arch::asm;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: `format` and `vec::Vec`
  --> kernel/src/main.rs:19:25
   |
19 | use alloc::{boxed::Box, format, vec::Vec};
   |                         ^^^^^^  ^^^^^^^^

warning: unused import: `MemoryRegion`
  --> kernel/src/main.rs:21:87
   |
21 | use bootloader_api::{BootInfo, BootloaderConfig, config::Mapping, entry_point, info::{MemoryRegion, MemoryRegionKind}};
   |                                                                                       ^^^^^^^^^^^^

warning: unused import: `structures::paging::FrameAllocator`
  --> kernel/src/main.rs:25:24
   |
25 | use x86_64::{VirtAddr, structures::paging::FrameAllocator};
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `self`
  --> kernel/src/main.rs:30:123
   |
30 |     framebuffer::{Color, init_global_framebuffer}, interrupts::exception::ExceptionStackFrame, memory::{frame_allocator::{self, BootInfoFrameAllocator}, paging::ActivePageTable}, repl:...
   |                                                                                                                           ^^^^

warning: unused import: `GlobalAlloc`
   --> kernel/src/main.rs:199:27
    |
199 |         use core::alloc::{GlobalAlloc, Layout};
    |                           ^^^^^^^^^^^

error: unsafe attribute used without unsafe
  --> kernel/src/process/trapret.rs:14:3
   |
14 | #[naked]
   |   ^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
14 | #[unsafe(naked)]
   |   +++++++     +

error: unsafe attribute used without unsafe
  --> kernel/src/process/trapret.rs:55:3
   |
55 | #[naked]
   |   ^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
55 | #[unsafe(naked)]
   |   +++++++     +

error[E0605]: non-primitive cast: `F` as `*const ()`
   --> kernel/src/memory/user_code.rs:101:17
    |
101 |     let start = func as *const () as usize;
    |                 ^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0606]: casting `&Box<TrapFrame>` as `*const TrapFrame` is invalid
   --> kernel/src/process/context.rs:122:34
    |
122 |                     let tf_ptr = tf as *const super::trapframe::TrapFrame;
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no variant or associated item named `Blocked` found for enum `ProcessState` in the current scope
   --> kernel/src/process/scheduler.rs:164:44
    |
164 |                 proc.state = ProcessState::Blocked;
    |                                            ^^^^^^^ variant or associated item not found in `ProcessState`
    |
   ::: kernel/src/process/mod.rs:24:1
    |
 24 | pub enum ProcessState {
    | --------------------- variant or associated item `Blocked` not found for this enum

error[E0599]: no variant or associated item named `Blocked` found for enum `ProcessState` in the current scope
   --> kernel/src/process/scheduler.rs:172:44
    |
172 |             if proc.state == ProcessState::Blocked {
    |                                            ^^^^^^^ variant or associated item not found in `ProcessState`
    |
   ::: kernel/src/process/mod.rs:24:1
    |
 24 | pub enum ProcessState {
    | --------------------- variant or associated item `Blocked` not found for this enum

error[E0609]: no field `user_stack` on type `&mut Process`
   --> kernel/src/process/scheduler.rs:188:51
    |
188 |                 if let Some(user_stack) = process.user_stack {
    |                                                   ^^^^^^^^^^ unknown field
    |
    = note: available fields are: `pid`, `state`, `context`, `kernel_stack`, `trapframe` ... and 3 others

warning: variable does not need to be mutable
   --> kernel/src/allocator/buddy_allocator.rs:125:13
    |
125 |         let mut current_addr = addr;
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `pid`
  --> kernel/src/process/scheduler.rs:72:21
   |
72 |                 let pid = proc.pid;
   |                     ^^^ help: if this is intentional, prefix it with an underscore: `_pid`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary `unsafe` block
   --> kernel/src/main.rs:329:26
    |
329 |         let page_table = unsafe {
    |                          ^^^^^^ unnecessary `unsafe` block
    |
    = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary `unsafe` block
   --> kernel/src/main.rs:352:26
    |
352 |         let page_table = unsafe {
    |                          ^^^^^^ unnecessary `unsafe` block

warning: unnecessary `unsafe` block
   --> kernel/src/main.rs:373:26
    |
373 |         let page_table = unsafe {
    |                          ^^^^^^ unnecessary `unsafe` block

Some errors have detailed explanations: E0425, E0599, E0605, E0606, E0609, E0658.
For more information about an error, try `rustc --explain E0425`.
warning: `kernel` (bin "kernel") generated 16 warnings
error: could not compile `kernel` (bin "kernel") due to 11 previous errors; 16 warnings emitted
